--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -4,7 +4,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: #000000;
+    overflow: hidden;
 }
 
 .container {
@@ -12,6 +13,8 @@ body {
     padding: 20px;
     max-width: 100%;
     transition: opacity 0.3s ease-in-out;
+    position: relative;
+    z-index: 1;
 }
 
 .title{
