--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -4,8 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #000000;
-    overflow: hidden;
+    background-color: #f0f0f0;
 }
 
 .container {
@@ -13,8 +12,6 @@ body {
     padding: 20px;
     max-width: 100%;
     transition: opacity 0.3s ease-in-out;
-    position: relative;
-    z-index: 1;
 }
 
 .title{
